# frankenstein

./: .gitignore  LICENSE  LICENSES-THIRD-PARTY.md  README.md  ROADMAP.md  cabal.project  frankenstein.cabal
.github/workflows/: ci.yml
app/: Main.hs
examples/: README.md  factorial.kk
examples/polyglot/: Scoring.hs  accumulate.rs  helpers.rs  lib_helpers.rs  search.m
examples/polyglot-demo/: Scoring.hs  accumulate.rs  check.m  double.rs  fib-main.kk  fib.hs  four-lang-fail.kk  four-lang.kk  main.kk  search.m  simple-demo.sh  test-polyglot.sh  three-lang.kk
k-specs/: bridge-properties.k  organ-ir.k  perceus-claims.k  test-oracle-plan.md
k-specs/tests/: run-kprove.sh  run-tests.sh
runtime/: kk_runtime.c  kk_runtime.h
rustc-shim/: Cargo.toml  README.md
rustc-shim/src/: main.rs
src/Frankenstein/Core/: Evidence.hs  KokaCore.hs  Linker.hs  Perceus.hs  Types.hs
src/Frankenstein/GhcBridge/: CoreTranslate.hs  Driver.hs
src/Frankenstein/KokaBridge/: CoreTranslate.hs  Driver.hs
src/Frankenstein/MercuryBridge/: CoreTranslate.hs  HldsParse.hs
src/Frankenstein/MlirEmit/: Dialects.hs  Emitter.hs
src/Frankenstein/OrganIR/: Consumer.hs
src/Frankenstein/RustBridge/: CoreTranslate.hs  MirParse.hs
test/: Main.hs  README.md
test/haskell/: Factorial.hs
test/mercury/: append.m
test/rust/: factorial.rs
